@@ -59,8 +59,8 @@ public class TestExampleGenerator {
 
         fileA.deleteOnExit();
         fileB.deleteOnExit();
-        A = "'" + fileA.getPath() + "'";
-        B = "'" + fileB.getPath() + "'";
+        A = Util.encodeEscape("'" + fileA.getPath() + "'");
+        B = Util.encodeEscape("'" + fileB.getPath() + "'");
         System.out.println("A : " + A + "\n" + "B : " + B);
         System.out.println("Test data created.");
     }
@@ -390,7 +390,7 @@ public class TestExampleGenerator {
         pigServer.registerQuery("B = filter A by x < 5;");
         pigServer.registerQuery("C = group B by x;");
         pigServer.registerQuery("D = foreach C generate group as x, COUNT(B) as the_count;");
-        pigServer.registerQuery("store D into '" +  out.getAbsolutePath() + "';");
+        pigServer.registerQuery("store D into '" +  Util.encodeEscape(out.getAbsolutePath()) + "';");
         Map<Operator, DataBag> derivedData = pigServer.getExamples(null);
     
         assertNotNull(derivedData);
